# Bachelor3

microbenchmarks/: Cargo.toml  upload.sh
microbenchmarks/src/disk/read/: normal.rs
microbenchmarks/src/disk/write/: channel.rs
microbenchmarks/src/http/: network_disk.rs
microbenchmarks/src/tcp/network_disk/: network_disk.rs
v1/: upload.sh
v1/src/: main.rs
