[package]
name = "microbenchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.9.0"
futures = "0.3.31"
async-channel = "1.9.0"
bytes = "1.10.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["stream"] }
hyper = { version = "0.14", features = ["full"] }
libc = "0.2.169"
# hyper = "1.5.1"
# hyper = { version = "1.6", features = ["full"] }
# reqwest = { version = "0.12.12", default-features = false}
# actix-web = "4.9.0"
# serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "network-tcp"
path = "src/tcp/network.rs"

[[bin]]
name = "network-http"
path = "src/http/network.rs"

[[bin]]
name = "network-disk-tcp"
path = "src/tcp/network_disk.rs"

[[bin]]
name = "network-disk-http"
path = "src/http/network_disk.rs"

[[bin]]
name = "client-tcp"
path = "src/tcp/client.rs"

[[bin]]
name = "client-http"
path = "src/http/client.rs"

[[bin]]
name = "disk-write"
path = "src/disk/write/normal.rs"

[[bin]]
name = "disk-write-channel"
path = "src/disk/write/channel.rs"

[[bin]]
name = "disk-read"
path = "src/disk/read/normal.rs"

